# genetic-algorithm

./: pyproject.toml
src/: main.ipynb
src/modules/: chromosome.py  genetic.py
