[project]
name = "genetic-algorithm"
version = "0.1.0"
description = "This project is an activity of the artificial intelligence discipline"
authors = [
    {name = "Marcos Paulo", email = "marcospvs96@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "python src/main.py"
